# VapourSynth-Waifu2x-w2xc

./: GNUmakefile  LICENSE  Makefile.am  README.md  configure  configure.ac
Waifu2x-w2xc/: Waifu2x-w2xc.cpp  Waifu2x-w2xc.vcxproj  Waifu2x-w2xc.vcxproj.filters
